--- a/static/css/table.css
+++ b/static/css/table.css
@@ -1,7 +1,8 @@
-table{
-    width:100%;
-    height:100%;
-    padding: 5%;
+table {
+    width: 90vw;
+    height: 90vh;
+    margin: 5%;
+    table-layout: fixed;
 }
 
 tbody{
@@ -13,4 +14,16 @@ tbody{
 button{
     margin-left: 5%;
     margin-right: 5%;
+}
+
+th{
+    height: 10%;
+}
+
+td{
+    text-align: left;
+    vertical-align: initial;
+    text-indent: 2%;
+    font-weight: bold;
+    width: calc(90%/7);
 }
