--- a/frontend/static/css/eventMenu.css
+++ b/frontend/static/css/eventMenu.css
@@ -11,6 +11,10 @@
     justify-content: center;
 }
 
+#eventContainer.failed{
+background-color: rgba(255, 0, 0, 0.699);
+}
+
 .eventContainterInputs{
     display: flex;
     flex-direction: row;
