--- a/frontend/static/css/eventMenu.css
+++ b/frontend/static/css/eventMenu.css
@@ -17,7 +17,7 @@ background-color: rgba(255, 0, 0, 0.699);
 
 .eventContainterInputs{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     padding: 10;
     width: 200;
     justify-content: space-between;
