--- a/frontend/static/css/main.css
+++ b/frontend/static/css/main.css
@@ -2,8 +2,8 @@ body {
     background-color: wheat;
     height:100vh;
     overflow: hidden; 
-    margin: 0;
-    margin-left: 5%;
+    margin: 5%;
+    margin-top: 0;
 }
 
 input {
