--- a/frontend/static/css/eventMenu.css
+++ b/frontend/static/css/eventMenu.css
@@ -36,7 +36,7 @@ background-color: rgba(255, 0, 0, 0.699);
 #eventTime{
     display: flex;
     flex-direction: row !important;
-    width: 60%;
+    max-width: 200px;
 }
 
 #weekly-options{
