--- a/frontend/static/css/eventMenu.css
+++ b/frontend/static/css/eventMenu.css
@@ -2,8 +2,8 @@
     display: none;
     right: 35%;
     top: 25%;
-    width: 250;
-    height: 600;
+    width: 250px;
+    height: 650px;
     background-color: rgba(0, 0, 0, 0.699);
     z-index: 25;
     position: absolute;
