--- a/frontend/static/css/main.css
+++ b/frontend/static/css/main.css
@@ -2,10 +2,36 @@ body {
     background-color: #ec8d96;
     height:100vh;
     overflow: hidden; 
-    margin: 5%;
+    margin: 2.5%;
     margin-top: 0;
 }
 
 input {
     font-size: inherit;
+}
+
+#settings-img{
+    position: absolute;
+    z-index: 1;
+    top: 3%;
+    height: 8%;
+    right: 4%;
+    filter: brightness(0.1);
+}
+
+#clock-menu {
+    display: flex;
+    width: 100;
+    height: 100;
+    position: absolute;
+    top: 12%;
+    right: 10%;
+    z-index: 5;
+    background-color: #ec8d96;
+    border: 2px solid;
+    color: black;
+    align-content: center;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    padding-left: 4%;
 }
